--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js",
+    "firebase/storage": "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js",
     "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/",
     "@firebase/firestore": "https://aistudiocdn.com/@firebase/firestore@^4.9.2",
     "@firebase/app": "https://aistudiocdn.com/@firebase/app@^0.14.5"
