--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js",
-    "firebase/storage": "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js",
-    "firebase/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/",
-    "@firebase/firestore": "https://aistudiocdn.com/@firebase/firestore@^4.9.2",
-    "@firebase/app": "https://aistudiocdn.com/@firebase/app@^0.14.5",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0"
+    "firebase/compat/app": "https://www.gstatic.com/firebasejs/9.23.0/firebase-compat-app.js",
+    "firebase/compat/firestore": "https://www.gstatic.com/firebasejs/9.23.0/firebase-compat-firestore.js",
+    "firebase/compat/storage": "https://www.gstatic.com/firebasejs/9.23.0/firebase-compat-storage.js",
+    "firebase/compat/auth": "https://www.gstatic.com/firebasejs/9.23.0/firebase-compat-auth.js",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
   }
 }
 </script>
